# Cicd

./: .gitignore  COMPLETION_REPORT.md  DOCKER_SETUP.md  FINAL_NOTES.md  FRONTEND_COMPLETED.txt  FRONTEND_DEBUG.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_DOCKER.md  SESSION_SUMMARY.md  START.sh  TESTS_ENHANCEMENT_SUMMARY.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_weather.py
backend/src/: main.py
backend/src/business/: exceptions.py
backend/src/business/dto/: horse_dto.py  jockey_dto.py  owner_dto.py  participant_dto.py  race_dto.py
backend/src/business/operations/: horse_operations.py  jockey_operations.py  owner_operations.py  participant_operations.py  race_operations.py
backend/src/data/: database.py  models.py  uow.py
backend/src/data/repositories/: __init__.py  base.py  horse_repository.py  (+4 more)
backend/src/framework/: dependencies.py  schemas.py
backend/tests/: conftest.py  test_e2e.py  test_failing.py  test_horse_operations.py  test_jockey_operations.py  test_owner_operations.py  test_participant_operations.py  test_race_operations.py
db/: after_upd_schema.sql  schema.sql
dev/: BACKEND_INSTRUCTIONS.md  FRONTEND_INSTRUCTIONS.md
frontend/: .env.example  Dockerfile  QUICKSTART.md  README.md  debug.html  index.html  nginx.conf  package.json  test-simple.html  test.html
frontend/src/: main.js
frontend/src/app/: app.js  router.js
(+51 files in other folders)
